--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "lucide-react": "^0.383.0",
     "react": "^18.2.0",
